--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
-mtunique's blog
+<!DOCTYPE html>
+<html lang="zh-cn">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap-theme.min.css">
+	<style type="text/css">
+		body { padding-top: 50px; }
+	</style>
+	<title>mtunique's site</title>
+</head>
+
+<body>
+	<nav class="nabar navbar-inverse navbar-fixed-top " role="navigation">
+		<div class="navbar-header">
+		    <!--
+		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		      <span class="sr-only">Toggle navigation</span>
+		      <span class="icon-bar"></span>
+		      <span class="icon-bar"></span>
+		      <span class="icon-bar"></span>
+		    </button>-->
+
+		    <a class="navbar-brand" href="#">Mtunique</a>
+		</div>
+		<ul class="nav navbar-nav">
+	      <li class="active"><a href="#">Link</a></li>
+	      <li><a href="#">Link</a></li>
+	      <li class="dropdown">
+	        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+	        <ul class="dropdown-menu">
+	          <li><a href="#">Action</a></li>
+	          <li><a href="#">Another action</a></li>
+	          <li><a href="#">Something else here</a></li>
+	          <li class="divider"></li>
+	          <li><a href="#">Separated link</a></li>
+	          <li class="divider"></li>
+	          <li><a href="#">One more separated link</a></li>
+	        </ul>	        
+	      </li>	      
+	    </ul>
+
+	</nav>
+
+	<div>
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		  </ol>
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner">
+		    <div class="item">
+		      <img src="http://www.w3cschool.cc/try/bootstrap/demo-v3/computer.jpg" class="img-responsive" alt="...">
+		      <div class="carousel-caption">
+		        <h1>Large Desktops are everywhere</h1>
+		        <p><button class="btn btn-success btn-lg">Try 30 day trial now<p></p>
+		      </button></p></div>
+		    </div>
+		    <div class="item active">
+		      <img src="http://www.w3cschool.cc/try/bootstrap/demo-v3/mobile.jpg" class="img-responsive" alt="...">
+		      <div class="carousel-caption">
+		        <h1>Mobiles are outnumbering desktops</h1>
+		        <p><button class="btn btn-success btn-lg">Try 30 day trial now<p></p>
+		      </button></p></div>
+		    </div>
+			<div class="item">
+		      <img src="http://www.w3cschool.cc/try/bootstrap/demo-v3/cloud1.jpg" class="img-responsive" alt="...">
+		      <div class="carousel-caption">
+		        <h1>Enterprises are adopting Cloud computing fast</h1>
+		        <p><button class="btn btn-success btn-lg">Try 30 day trial now<p></p>
+		      </button></p></div>
+		    </div>
+		  </div>
+		  <!-- Controls -->
+		  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left"></span>
+		  </a>
+		  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right"></span>
+		  </a>
+		</div>
+	</div>
+
+
+
+	<script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
+	<script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+</body>
+
+</html>
