--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   	margin-left: auto;
 	margin-right: auto;
 	}
+	.cntrain
+	{
+		padding-bottom: 430px;
+	}
 	</style>
 </head>
 
@@ -55,19 +59,19 @@
 		    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 		  </ol>
 		  <!-- Wrapper for slides -->
-		  <div class="carousel-inner">		    
-		    <div class="item active">		      
-		      <img src="cntrain.png" class="img-responsive" alt="Responsive image">
-		      <div class="carousel-caption">
-		        <h1>cn train</h1>
-		      </div>
-		    </div>
-		    <div class="item">
+		  <div class="carousel-inner">
+		  	<div class="item active">
 		      <img src="github.jpeg" class="img-responsive" alt="Responsive image">
 		      <div class="carousel-caption">
 		      	<a href="https://github.com/mtunique" type="button" class="btn btn-info btn-lg">Follow me</a>
 		      </div>
-		    </div>
+		    </div>		    
+		    <div class="item">		      
+		      <img src="cntrain.png" class="img-responsive" alt="Responsive image">
+		      <div class="carousel-caption cntrain">
+		        <a href="http://trainchange.sinaapp.com" type="button" class="btn btn-warning btn-lg">Try it</a>
+		      </div>
+		    </div>		    
 		  </div>
 
 		  <!-- Controls -->
